test: add in API testing scripts
